--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-gifted-chat": "^2.8.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "expo-router": "~5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
