--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.11",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.1",
+    "lucide-react": "^0.514.0",
+    "nativewind": "^2.0.11",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-gifted-chat": "^2.8.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
-    "expo-router": "~5.1.0"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "ajv": "^7.2.4",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "prettier": "^3.5.3",
