--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "noImplicitAny": "false"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.3.14",
@@ -36,7 +37,9 @@
     "ajv": "^7.2.4",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.5.3",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.8.3"
   },
   "private": true
