--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nativewind": "^2.0.11",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-linear-gradient": "^2.8.3",
