--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.3.2",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
