--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.11",
+    "expo-document-picker": "~13.1.6",
     "expo-linear-gradient": "~14.1.5",
+    "expo-modules-autolinking": "~2.1.0",
     "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.1",
@@ -22,7 +24,6 @@
     "nativewind": "^2.0.11",
     "react": "19.0.0",
     "react-native": "0.79.3",
-    "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -30,11 +31,11 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-modules-autolinking": "~2.1.0"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.0.10",
     "ajv": "^7.2.4",
     "eslint": "^9.28.0",
@@ -42,8 +43,7 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.3.2",
-    "typescript": "~5.8.3",
-    "@react-native-community/cli": "latest"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
