--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.79.3",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-gifted-chat": "^2.8.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.0",
