--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "noImplicitAny": "false"
   },
   "dependencies": {
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
@@ -32,6 +33,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
